# mellon-book

./: Cargo.toml  flake.nix  schema.lt.hcl
migrations/: 20250902214731_add_players_table.up.sql  20250902214731_create_players.sql  20250902214731_create_players_table.sql  20250903211348_create_characters.sql  20250903211348_create_characters_table.sql  20250905041301_create_ancestries_and_ancestry_traits.sql  20250908010625_create_character_levels.sql  20250908021241_associate_character_levels_with_ancestry_traits.sql  20250908022109_associate_ancestries_with_characters.sql  20251121025251_create_players_table.sql  20251121030611_create_characters_table.sql  20251121034312_create_ancestries_table.sql  20251121041418_create_ancestry_traits_table.sql  20251121041926_join_ancestries_and_ancestry_traits.sql  20251121043544_create_character_levels_table.sql  20251121044339_join_ancestries_and_character_levels.sql  20251121045118_join_ancestry_traits_and_character_levels.sql  20251124072857_create_classes_table.sql  20251124073158_create_subclasses_table.sql  20251124073439_join_classes_and_subclasses.sql  20251124230402_join_character_levels_and_classes.sql  20251124232837_join_character_levels_and_subclasses.sql  20251124233220_create_attributes_table.sql  20251125001020_create_skills_table.sql  20251125001356_create_trades_table.sql  20251125001642_join_attributes_and_trades.sql  20251125002115_create_masteries_table.sql  20251125002252_create_languages_table.sql  20251125034041_create_backgrounds_table.sql  20251125034349_join_backgrounds_and_languages.sql  (+25 more)
seeds/: dev.sql
(+24 files in other folders)
