[package]
name = "mellon-book"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite", "uuid", "chrono"] }
turann = { git = "https://github.com/masterned/turann.git", tag = "v1.1.0" }

[dependencies.uuid]
version = "1.13.1"
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]
